[gd_scene load_steps=7 format=3 uid="uid://diiplpxfjfft0"]

[ext_resource type="Script" path="res://entities/bullet/bullet.gd" id="1_3md7y"]
[ext_resource type="Texture2D" uid="uid://cu3hiwvi06ue4" path="res://assets/item_sprites/bullet_sprite.png" id="1_v26q3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdqfb"]
size = Vector2(11, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yc2xs"]
size = Vector2(18, 13)

[sub_resource type="Animation" id="Animation_o2o0a"]
resource_name = "bullet_spin"
length = 1.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y8gqo"]
_data = {
"bullet_spin": SubResource("Animation_o2o0a")
}

[node name="Bullet" type="CharacterBody2D"]
scale = Vector2(0.7, 0.7)
collision_layer = 0
script = ExtResource("1_3md7y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_v26q3")
hframes = 3
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
rotation = -1.5708
shape = SubResource("RectangleShape2D_cdqfb")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(8.5, 0)
collision_mask = 3

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" groups=["hazard"]]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_yc2xs")

[node name="FlightTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y8gqo")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
[connection signal="body_exited" from="HitBox" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="FlightTimer" to="." method="_on_flight_timer_timeout"]
